<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_view_log"
        android:title="@string/pref_view_log" />

    <PreferenceCategory android:title="@string/pref_server">

        <Preference
            android:key="pref_relay_list_button"
            android:title="@string/transports" />

        <Preference
            android:key="proxy_settings_button"
            android:title="@string/proxy_settings" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_bcc_self"
            android:title="@string/pref_multidevice"
            android:summary="@string/pref_multidevice_explain" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_encryption">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_post_quantum_encryption"
            android:title="@string/pref_post_quantum_encryption"
            android:summary="@string/pref_post_quantum_encryption_explain" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_forward_secrecy"
            android:title="@string/pref_forward_secrecy"
            android:summary="@string/pref_forward_secrecy_explain" />

        <Preference
            android:key="pref_rotate_keypair_now"
            android:title="@string/pref_rotate_keypair_now" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_experimental_features">

        <Preference
            android:summary="@string/pref_experimental_features_explain"
            android:selectable="false" />

        <Preference
            android:key="pref_webxdc_store_url"
            android:title="@string/webxdc_store_url"
            android:summary="@string/none" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_stats_sending"
            android:title="@string/send_stats_to_devs" />

    </PreferenceCategory>

</PreferenceScreen>
